Crop: any WCS is acceptable for WCS-mode crops over a single image
Until now, the WCS limitations (for example being aligned with the
coordinate axises) that are necessary for cropping from many files also
existed when cropping from a single file which was very annoying (forcing
the user to use Table's column arithmetic to find the conversion, and then
doing an image-mode crop).

With this commit, when there is only a single image to crop from the given
coordinates, widths or polygons are converted to image coordinates at the
very start and Crop will do the rest of its processing as if it was in
image mode. Therefore allowing it to work with any WCS that is recognizable
by WCSLIB.

--- a/NEWS
+++ b/NEWS
@@ -143,6 +143,14 @@ See the end of the file for license conditions.
      reason for this is that we now have a more robust outlier removal
      algorithm (see description under "NoiseChisel & Statistics").
 
+  Crop:
+   - When cropping a single image in WCS mode, there is no longer any
+     limitation on the WCS. Until now for all WCS mode crops, it was
+     necessary for the WCS to be aligned to the celestial coordinates. But
+     from this version, this is only necessary when cropping from many
+     files (and stitching them together where necessary). For WCS-mode
+     crops of a single image, any WCS that is recognized by WCSLIB is fine.
+
   Fits:
    - The '--pixelscale' option also prints the pixel area (for 2D inputs,
      or 2D slices of 3D inputs) and the voxel volume (for 3D inputs). Until
