MakeCatalog: good sky subtraction on one-element-per-tile sky
Until now, when the given Sky image that should have been subtracted was a
single-element-per-tile tessellation (for example output of NoiseChisel's
'--oneelempertile' option), MakeCatalog would mistakenly subtract it from
the object label image! This was happening because MakeCatalog's original
tessellation is done over the objects image.

With this commit, the main macro-like function that does the parsing over
the tiles for Sky subtraction is also given the 'values' array and the Sky
value is subtracted from that (only using the objects image as a grid/guide
for the pixel positions).

This fixes bug #59765.

--- a/NEWS
+++ b/NEWS
@@ -197,6 +197,8 @@ See the end of the file for license conditions.
   bug #59459: Unclear WCS when both PC and CD exist in input, but conflict.
   bug #59625: MakeProfiles uses last --kernel, if it is called more than once.
   bug #59700: Segment's excessive RAM usage when many clumps over a detection.
+  bug #59765: MakeCatalog crash when to-be-subtracted Sky is a single-element
+              per tile tessellation (e.g., NoiseChisel's '--oneelempertile').
 
 
 
